📁 Bundle size optimization 📁 Project build

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,9 @@
   <title>Html tag test</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="author" content="Gido Kristoffel">
+  <meta name="keywords" content="HTML tests, HTML testing, Online HTML quiz, Learn HTML, HTML knowledge, HTML practice, HTML tags, HTML quiz, HTML quiz game, HTML assessment, HTML exam, HTML questionnaire">
+  <meta name="description" content="HTML Tag Knowledge Test. Test your HTML skills with our online quiz">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
